--- a/templates/sidebar/admin_sidebar.html
+++ b/templates/sidebar/admin_sidebar.html
@@ -132,6 +132,19 @@
     </ul>
 
     <p class="text-muted nav-heading mt-4 mb-1">
+        <span>Account</span>
+    </p>
+    <ul class="navbar-nav flex-fill w-100 mb-2">
+        <li class="nav-item w-100">
+            <a class="nav-link" href="{% url 'logout' %}">
+                <i class="fe fe-log-out fe-16"></i>
+                <span class="ml-3 item-text">Logout</span>
+            </a>
+        </li>
+    </ul>
+
+
+    <p class="text-muted nav-heading mt-4 mb-1">
         <span>Documentation</span>
     </p>
     <ul class="navbar-nav flex-fill w-100 mb-2">
