--- a/templates/sidebar/admin_sidebar.html
+++ b/templates/sidebar/admin_sidebar.html
@@ -2,28 +2,19 @@
 
 <nav class="vertnav navbar navbar-light">
     <!-- nav bar -->
-    
-    <p class="text-muted nav-heading mt-4 pt-2 mb-1">
-        <span>Admin Data Panel</span>
+
+    <p class="text-muted nav-heading mt-4 mb-1">
+        <span>Admin Dashboard</span>
     </p>
     <ul class="navbar-nav flex-fill w-100 mb-2">
-        <li class="nav-item dropdown">
-            <a href="#dashboard" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle nav-link">
+        <li class="nav-item w-100">
+            <a class="nav-link" href="{% url 'admin_dashboard' %}">
                 <i class="fe fe-home fe-16"></i>
-                <span class="ml-3 item-text">Dashboard</span><span class="sr-only">(current)</span>
+                <span class="ml-3 item-text">Dashboard</span>
             </a>
-            <ul class="collapse list-unstyled pl-4 w-100" id="dashboard">
-                <li class="nav-item">
-                    <a class="nav-link pl-3" href="./index.html"><span class="ml-1 item-text">Status
-                            Dashboard</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link pl-3" href="./dashboard-analytics.html"><span class="ml-1 item-text">Analytics
-                            Dashboard</span></a>
-                </li>
-            </ul>
         </li>
     </ul>
+
     <p class="text-muted nav-heading mt-4 mb-1">
         <span>Admin Data Panel</span>
     </p>
@@ -35,18 +26,20 @@
             </a>
             <ul class="collapse list-unstyled pl-4 w-100" id="ui-elements">
                 <li class="nav-item">
-                    <a class="nav-link pl-3" href="./ui-color.html"><span class="ml-1 item-text">All Clients</span>
+                    <a class="nav-link pl-3" href="{% url 'client_all'%}"><span class="ml-1 item-text">All
+                            Clients</span>
                     </a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link pl-3" href="./ui-buttons.html"><span class="ml-1 item-text">Add Client</span></a>
+                {% comment %} <li class="nav-item">
+                    <a class="nav-link pl-3" href="{% url 'client_add' %}"><span class="ml-1 item-text">Add
+                            Client</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link pl-3" href="./ui-typograpy.html"><span class="ml-1 item-text">Edit
                             Client</span></a>
-                </li>
+                </li> {% endcomment %}
                 <li class="nav-item">
-                    <a class="nav-link pl-3" href="./ui-icons.html"><span class="ml-1 item-text">Delete
+                    <a class="nav-link pl-3" href="{% url 'client_delete' %}"><span class="ml-1 item-text">Delete
                             Client</span></a>
                 </li>
             </ul>
@@ -61,14 +54,14 @@
                     <a class="nav-link pl-3" href="./form_elements.html"><span class="ml-1 item-text">View Users
                         </span></a>
                 </li>
-                <li class="nav-item">
+                {% comment %} <li class="nav-item">
                     <a class="nav-link pl-3" href="./form_elements.html"><span class="ml-1 item-text">Add User
                         </span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link pl-3" href="./form_elements.html"><span class="ml-1 item-text">Modify User
                         </span></a>
-                </li>
+                </li> {% endcomment %}
                 <li class="nav-item">
                     <a class="nav-link pl-3" href="./form_elements.html"><span class="ml-1 item-text">Delete Users
                         </span></a>
@@ -111,24 +104,31 @@
                 </li>
             </ul>
         </li>
+
+        <li class="nav-item w-100">
+            <a class="nav-link" href="">
+                <i class="fe fe-trello fe-16"></i>
+                <span class="ml-3 item-text">Client Admins</span>
+            </a>
+        </li>
     </ul>
 
     <p class="text-muted nav-heading mt-4 mb-1">
         <span>Revenue</span>
     </p>
     <ul class="navbar-nav flex-fill w-100 mb-2">
-        <li class="nav-item dropdown">
-            <a href="#contact" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle nav-link">
+        <li class="nav-item w-100">
+            <a class="nav-link" href="">
                 <i class="fe fe-dollar-sign fe-16"></i>
                 <span class="ml-3 item-text">Payments</span>
             </a>
-            <ul class="collapse list-unstyled pl-4 w-100" id="contact">
-                <a class="nav-link pl-3" href="./contacts-list.html"><span class="ml-1">Transactions</span></a>
-                <a class="nav-link pl-3" href="./contacts-grid.html"><span class="ml-1">Search Payemnt</span></a>
-                <a class="nav-link pl-3" href="./contacts-new.html"><span class="ml-1">New Contact</span></a>
-            </ul>
         </li>
-
+        <li class="nav-item w-100">
+            <a class="nav-link" href="">
+                <i class="fe fe-search fe-16"></i>
+                <span class="ml-3 item-text">Search Payment</span>
+            </a>
+        </li>
     </ul>
 
     <p class="text-muted nav-heading mt-4 mb-1">
