--- a/templates/sidebar/admin_sidebar.html
+++ b/templates/sidebar/admin_sidebar.html
@@ -1,159 +1,194 @@
 {% load static %}
 
 <nav class="vertnav navbar navbar-light">
-    <!-- nav bar -->
+  <!-- nav bar -->
 
-    <p class="text-muted nav-heading mt-4 mb-1">
-        <span>Admin Dashboard</span>
-    </p>
-    <ul class="navbar-nav flex-fill w-100 mb-2">
-        <li class="nav-item w-100">
-            <a class="nav-link" href="{% url 'admin_dashboard' %}">
-                <i class="fe fe-home fe-16"></i>
-                <span class="ml-3 item-text">Dashboard</span>
-            </a>
-        </li>
-    </ul>
+  <p class="text-muted nav-heading mt-4 mb-1">
+    <span>Admin Dashboard</span>
+  </p>
+  <ul class="navbar-nav flex-fill w-100 mb-2">
+    <li class="nav-item w-100">
+      <a class="nav-link" href="{% url 'admin_dashboard' %}">
+        <i class="fe fe-home fe-16"></i>
+        <span class="ml-3 item-text">Dashboard</span>
+      </a>
+    </li>
+  </ul>
 
-    <p class="text-muted nav-heading mt-4 mb-1">
-        <span>Admin Data Panel</span>
-    </p>
-    <ul class="navbar-nav flex-fill w-100 mb-2">
-        <li class="nav-item dropdown">
-            <a href="#ui-elements" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle nav-link">
-                <i class="fe fe-users fe-16"></i>
-                <span class="ml-3 item-text">Organisation - Clients</span>
-            </a>
-            <ul class="collapse list-unstyled pl-4 w-100" id="ui-elements">
-                <li class="nav-item">
-                    <a class="nav-link pl-3" href="{% url 'client_all'%}"><span class="ml-1 item-text">All
-                            Clients</span>
-                    </a>
-                </li>
-                {% comment %} <li class="nav-item">
-                    <a class="nav-link pl-3" href="{% url 'client_add' %}"><span class="ml-1 item-text">Add
-                            Client</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link pl-3" href="./ui-typograpy.html"><span class="ml-1 item-text">Edit
-                            Client</span></a>
-                </li> {% endcomment %}
-                <li class="nav-item">
-                    <a class="nav-link pl-3" href="{% url 'client_delete' %}"><span class="ml-1 item-text">Delete
-                            Client</span></a>
-                </li>
-            </ul>
+  <p class="text-muted nav-heading mt-4 mb-1">
+    <span>Admin Data Panel</span>
+  </p>
+  <ul class="navbar-nav flex-fill w-100 mb-2">
+    <li class="nav-item dropdown">
+      <a
+        href="#ui-elements"
+        data-toggle="collapse"
+        aria-expanded="false"
+        class="dropdown-toggle nav-link"
+      >
+        <i class="fe fe-users fe-16"></i>
+        <span class="ml-3 item-text">Organisation - Clients</span>
+      </a>
+      <ul class="collapse list-unstyled pl-4 w-100" id="ui-elements">
+        <li class="nav-item">
+          <a class="nav-link pl-3" href="{% url 'client_all'%}"
+            ><span class="ml-1 item-text">All Clients</span>
+          </a>
         </li>
-        <li class="nav-item dropdown">
-            <a href="#forms" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle nav-link">
-                <i class="fe fe-user fe-16"></i>
-                <span class="ml-3 item-text">Users</span>
-            </a>
-            <ul class="collapse list-unstyled pl-4 w-100" id="forms">
-                <li class="nav-item">
-                    <a class="nav-link pl-3" href="./form_elements.html"><span class="ml-1 item-text">View Users
-                        </span></a>
-                </li>
-                {% comment %} <li class="nav-item">
-                    <a class="nav-link pl-3" href="./form_elements.html"><span class="ml-1 item-text">Add User
-                        </span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link pl-3" href="./form_elements.html"><span class="ml-1 item-text">Modify User
-                        </span></a>
-                </li> {% endcomment %}
-                <li class="nav-item">
-                    <a class="nav-link pl-3" href="./form_elements.html"><span class="ml-1 item-text">Delete Users
-                        </span></a>
-                </li>
-            </ul>
+        {% comment %}
+        <li class="nav-item">
+          <a class="nav-link pl-3" href="{% url 'client_add' %}"
+            ><span class="ml-1 item-text">Add Client</span></a
+          >
         </li>
-        <li class="nav-item dropdown">
-            <a href="#tables" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle nav-link">
-                <i class="fe fe-key fe-16"></i>
-                <span class="ml-3 item-text">API Keys</span>
-            </a>
-            <ul class="collapse list-unstyled pl-4 w-100" id="tables">
-                <li class="nav-item">
-                    <a class="nav-link pl-3" href="./table_basic.html"><span class="ml-1 item-text">Lookup
-                            Keys</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link pl-3" href="./table_datatables.html"><span class="ml-1 item-text">Issue
-                            Key</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link pl-3" href="./table_advanced.html"><span class="ml-1 item-text">Deactivate
-                            Keys</span></a>
-                </li>
-            </ul>
+        <li class="nav-item">
+          <a class="nav-link pl-3" href="./ui-typograpy.html"
+            ><span class="ml-1 item-text">Edit Client</span></a
+          >
         </li>
-        <li class="nav-item dropdown">
-            <a href="#charts" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle nav-link">
-                <i class="fe fe-hard-drive fe-16"></i>
-                <span class="ml-3 item-text">Quotas</span>
-            </a>
-            <ul class="collapse list-unstyled pl-4 w-100" id="charts">
-                <li class="nav-item">
-                    <a class="nav-link pl-3" href="./chart-inline.html"><span class="ml-1 item-text">Quota
-                            List</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link pl-3" href="./chart-chartjs.html"><span class="ml-1 item-text">Quota
-                            Allowance</span></a>
-                </li>
-            </ul>
+        {% endcomment %}
+        <li class="nav-item">
+          <a class="nav-link pl-3" href="{% url 'client_manage' %}"
+            ><span class="ml-1 item-text">Manage Client</span></a
+          >
         </li>
+      </ul>
+    </li>
+    <li class="nav-item dropdown">
+      <a
+        href="#forms"
+        data-toggle="collapse"
+        aria-expanded="false"
+        class="dropdown-toggle nav-link"
+      >
+        <i class="fe fe-user fe-16"></i>
+        <span class="ml-3 item-text">Users</span>
+      </a>
+      <ul class="collapse list-unstyled pl-4 w-100" id="forms">
+        <li class="nav-item">
+          <a class="nav-link pl-3" href="./form_elements.html"
+            ><span class="ml-1 item-text">All Users </span></a
+          >
+        </li>
+        {% comment %}
+        <li class="nav-item">
+          <a class="nav-link pl-3" href="./form_elements.html"
+            ><span class="ml-1 item-text">Add User </span></a
+          >
+        </li>
+        <li class="nav-item">
+          <a class="nav-link pl-3" href="./form_elements.html"
+            ><span class="ml-1 item-text">Modify User </span></a
+          >
+        </li>
+        {% endcomment %}
+        <li class="nav-item">
+          <a class="nav-link pl-3" href="./form_elements.html"
+            ><span class="ml-1 item-text">Modify Users </span></a
+          >
+        </li>
+      </ul>
+    </li>
+    <li class="nav-item dropdown">
+      <a
+        href="#tables"
+        data-toggle="collapse"
+        aria-expanded="false"
+        class="dropdown-toggle nav-link"
+      >
+        <i class="fe fe-key fe-16"></i>
+        <span class="ml-3 item-text">API Keys</span>
+      </a>
+      <ul class="collapse list-unstyled pl-4 w-100" id="tables">
+        <li class="nav-item">
+          <a class="nav-link pl-3" href="./table_basic.html"
+            ><span class="ml-1 item-text">Lookup Keys</span></a
+          >
+        </li>
+        <li class="nav-item">
+          <a class="nav-link pl-3" href="./table_datatables.html"
+            ><span class="ml-1 item-text">Issue Key</span></a
+          >
+        </li>
+        <li class="nav-item">
+          <a class="nav-link pl-3" href="./table_advanced.html"
+            ><span class="ml-1 item-text">Deactivate Keys</span></a
+          >
+        </li>
+      </ul>
+    </li>
+    <li class="nav-item dropdown">
+      <a
+        href="#charts"
+        data-toggle="collapse"
+        aria-expanded="false"
+        class="dropdown-toggle nav-link"
+      >
+        <i class="fe fe-hard-drive fe-16"></i>
+        <span class="ml-3 item-text">Quotas</span>
+      </a>
+      <ul class="collapse list-unstyled pl-4 w-100" id="charts">
+        <li class="nav-item">
+          <a class="nav-link pl-3" href="./chart-inline.html"
+            ><span class="ml-1 item-text">Quota List</span></a
+          >
+        </li>
+        <li class="nav-item">
+          <a class="nav-link pl-3" href="./chart-chartjs.html"
+            ><span class="ml-1 item-text">Quota Allowance</span></a
+          >
+        </li>
+      </ul>
+    </li>
 
-        <li class="nav-item w-100">
-            <a class="nav-link" href="">
-                <i class="fe fe-trello fe-16"></i>
-                <span class="ml-3 item-text">Client Admins</span>
-            </a>
-        </li>
-    </ul>
+    <li class="nav-item w-100">
+      <a class="nav-link" href="">
+        <i class="fe fe-trello fe-16"></i>
+        <span class="ml-3 item-text">Client Admins</span>
+      </a>
+    </li>
+  </ul>
 
-    <p class="text-muted nav-heading mt-4 mb-1">
-        <span>Revenue</span>
-    </p>
-    <ul class="navbar-nav flex-fill w-100 mb-2">
-        <li class="nav-item w-100">
-            <a class="nav-link" href="">
-                <i class="fe fe-dollar-sign fe-16"></i>
-                <span class="ml-3 item-text">Payments</span>
-            </a>
-        </li>
-        <li class="nav-item w-100">
-            <a class="nav-link" href="">
-                <i class="fe fe-search fe-16"></i>
-                <span class="ml-3 item-text">Search Payment</span>
-            </a>
-        </li>
-    </ul>
+  <p class="text-muted nav-heading mt-4 mb-1">
+    <span>Revenue</span>
+  </p>
+  <ul class="navbar-nav flex-fill w-100 mb-2">
+    <li class="nav-item w-100">
+      <a class="nav-link" href="">
+        <i class="fe fe-dollar-sign fe-16"></i>
+        <span class="ml-3 item-text">Payments</span>
+      </a>
+    </li>
+    <li class="nav-item w-100">
+      <a class="nav-link" href="">
+        <i class="fe fe-search fe-16"></i>
+        <span class="ml-3 item-text">Search Payment</span>
+      </a>
+    </li>
+  </ul>
 
-    <p class="text-muted nav-heading mt-4 mb-1">
-        <span>Account</span>
-    </p>
-    <ul class="navbar-nav flex-fill w-100 mb-2">
-        <li class="nav-item w-100">
-            <a class="nav-link" href="{% url 'logout' %}">
-                <i class="fe fe-log-out fe-16"></i>
-                <span class="ml-3 item-text">Logout</span>
-            </a>
-        </li>
-    </ul>
+  <p class="text-muted nav-heading mt-4 mb-1">
+    <span>Account</span>
+  </p>
+  <ul class="navbar-nav flex-fill w-100 mb-2">
+    <li class="nav-item w-100">
+      <a class="nav-link" href="{% url 'logout' %}">
+        <i class="fe fe-log-out fe-16"></i>
+        <span class="ml-3 item-text">Logout</span>
+      </a>
+    </li>
+  </ul>
 
-
-    <p class="text-muted nav-heading mt-4 mb-1">
-        <span>Documentation</span>
-    </p>
-    <ul class="navbar-nav flex-fill w-100 mb-2">
-        <li class="nav-item w-100">
-            <a class="nav-link" href="../docs/index.html">
-                <i class="fe fe-help-circle fe-16"></i>
-                <span class="ml-3 item-text">Getting Start</span>
-            </a>
-        </li>
-    </ul>
-    <div class="btn-box w-100 mt-4 mb-1"></div>
+  <p class="text-muted nav-heading mt-4 mb-1">
+    <span>Documentation</span>
+  </p>
+  <ul class="navbar-nav flex-fill w-100 mb-2">
+    <li class="nav-item w-100">
+      <a class="nav-link" href="../docs/index.html">
+        <i class="fe fe-help-circle fe-16"></i>
+        <span class="ml-3 item-text">Getting Start</span>
+      </a>
+    </li>
+  </ul>
+  <div class="btn-box w-100 mt-4 mb-1"></div>
 </nav>
