--- a/templates/main/client-signup.html
+++ b/templates/main/client-signup.html
@@ -23,17 +23,36 @@
         <a class="navbar-brand mx-auto mt-2 flex-fill text-center" href="./index.html">
           <h1>VASUDEVA</h1>
         </a>
-        <h1 class="h6 mb-3">ADMIN PORTAL</h1>
+        <h1 class="h6 mb-3">Client Registration</h1>
+
         <div class="form-group">
-          <label for="inputEmail" class="sr-only">Username</label>
-          <input type="text" id="inputEmail" class="form-control form-control-lg" placeholder="Username" required=""
-            name="username" autofocus="">
+          <label for="org_name" class="sr-only">Company Name</label>
+          <input type="text" id="org_name" class="form-control form-control-lg" placeholder="Company/Project Name"
+            required="" name="org_name">
         </div>
         <div class="form-group">
-          <label for="inputPassword" class="sr-only">Password</label>
-          <input type="password" id="inputPassword" class="form-control form-control-lg" placeholder="Password"
-            name="password" required="">
+          <label for="mobile" class="sr-only">Mobile </label>
+          <input type="text" id="mobile" class="form-control form-control-lg" placeholder="Phone Number" required=""
+            name="mobile">
         </div>
+        <div class="form-group">
+          <label for="username" class="sr-only">Admin Username</label>
+          <input type="text" id="username" class="form-control form-control-lg" placeholder="Username" required=""
+            name="username">
+        </div>
+
+        <div class="form-group">
+          <label for="name" class="sr-only">Admin Name</label>
+          <input type="text" id="name" class="form-control form-control-lg" placeholder="Admin Name" required=""
+            name="name">
+        </div>
+
+        <div class="form-group">
+          <label for="email" class="sr-only">Email</label>
+          <input type="text" id="email" class="form-control form-control-lg" placeholder="E-Mail ID" required=""
+            name="email">
+        </div>
+
         <div class="form-group">
           {{form.captcha}}
         </div>
@@ -54,26 +73,6 @@
     var day = d.getFullYear();
     document.getElementById('footer-copyright').innerHTML = "Vasudeva - CEX © " + day + " ";
 
-    function checkTime(i) {
-      if (i < 10) {
-        i = "0" + i;
-      }
-      return i;
-    }
-    function startTime() {
-      var today = new Date();
-      var h = today.getHours();
-      var m = today.getMinutes();
-      var s = today.getSeconds();
-      // add a zero in front of numbers<10
-      m = checkTime(m);
-      s = checkTime(s);
-      document.getElementById('footer-time').innerHTML = "Server Time -" + h + ":" + m + ":" + s;
-      t = setTimeout(function () {
-        startTime()
-      }, 500);
-    }
-    startTime();
   </script>
 
   <script>
