basic form for admin login added up

--- a/templates/main/client-signup.html
+++ b/templates/main/client-signup.html
@@ -58,15 +58,17 @@
         </div>
         <div class="checkbox mb-3">
           <label>
-            <input type="checkbox" value="remember-me"> Stay logged in </label>
+            <input type="checkbox" name="tnc" value="yes"> By checking this box, you agree to <a href="">Terms
+              &
+              condition</a> of using
+            Vasudeva API services.</label>
         </div>
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Let me in</button>
+        <button class="btn btn-lg btn-primary btn-block" type="submit">Register Company</button>
         <p id="footer-copyright" class="mt-5 mb-3 text-muted"></p>
         <p id="footer-time" class=" mb-3 text-muted"></p>
       </form>
     </div>
   </div>
-
 
   <script>
     var d = new Date();
