Client signup done

--- a/templates/main/admin-client-delete.html
+++ b/templates/main/admin-client-delete.html
@@ -19,8 +19,7 @@
                 <i class="fe fe-menu navbar-toggler-icon"></i>
             </button>
             <div>
-                <h4 class="pt-2 d-inline"><mark>Vasudeva</mark></h4>
-                <span class="badge badge-info">Beta</span>
+                <h4 class="pt-2 d-inline"><mark>Vasudeva</mark></h4><span class="badge badge-info b">Beta</span>
             </div>
             <ul class="nav">
 
