index page complete + clent login

--- a/templates/main/client-login.html
+++ b/templates/main/client-login.html
@@ -14,20 +14,20 @@
   <!-- CSS IMPORTS ENDS -->
 
 
-  
+
 
 </head>
 
 <body class="light">
   {% include 'preloader/preloader.html' %}
-  
+
   <div class="wrapper vh-100">
     <div class="row align-items-center h-100">
       <form class="col-lg-3 col-md-4 col-10 mx-auto text-center">
-        <a class="navbar-brand mx-auto mt-2 flex-fill text-center" href="./index.html">
+        <a class="navbar-brand mx-auto mt-2 flex-fill text-center" href="">
           <h1>VASUDEVA</h1>
         </a>
-      
+
         <h1 class="h6 mb-3">CLIENT PORTAL</h1>
         <div class="form-group">
           <label for="inputEmail" class="sr-only">Username</label>
@@ -82,13 +82,13 @@
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
 
-<script>
+  <script>
 
-var loader = document.getElementById("preloader");
-window.addEventListener("load",function(){
-  $("#preloader").fadeOut(1000/2);
-})
-</script>
+    var loader = document.getElementById("preloader");
+    window.addEventListener("load", function () {
+      $("#preloader").fadeOut(1000 / 2);
+    })
+  </script>
 
 </body>
 
