client admin form success modal chenges

--- a/templates/main/admin-clientadmin-manage.html
+++ b/templates/main/admin-clientadmin-manage.html
@@ -19,8 +19,9 @@
                 <i class="fe fe-menu navbar-toggler-icon"></i>
             </button>
             <div>
-                <h4 class="pt-2 d-inline"><mark>Vasudeva</mark><h4>
-                <span class="badge badge-info">Beta</span>
+                <h4 class="pt-2 d-inline"><mark>Vasudeva</mark>
+                    <h4>
+                        <span class="badge badge-info">Beta</span>
             </div>
             <ul class="nav">
 
@@ -268,14 +269,14 @@
                             class="fe fe-x"></i></button>
                 </div>
                 <div class="modal-body text-center">
-                    <h5>Organisation registered successfully</h5>
+                    <h5>Client Admin registered successfully</h5>
                 </div>
                 <div class=" text-center mb-3">
                     <i class="fe fe-check-circle fe-24 text-success "></i>
                 </div>
                 <div class="modal-body text-center">
                     <a href="{% url 'client_all'%}">
-                        <button class="btn btn-secondary">To Clients</button>
+                        <button class="btn btn-secondary">To Client Admins</button>
                     </a>
                 </div>
             </div>
