--- a/templates/main/admin-login.html
+++ b/templates/main/admin-login.html
@@ -15,7 +15,7 @@
 
 </head>
 
-<body class="light ">
+<body class="light">
   <div class="wrapper vh-100">
     <div class="row align-items-center h-100">
       <form class="col-lg-3 col-md-4 col-10 mx-auto text-center" method="post">
@@ -42,6 +42,9 @@
             <input type="checkbox" value="remember-me"> Stay logged in </label>
         </div>
         <button class="btn btn-lg btn-primary btn-block" type="submit">Let me in</button>
+        <a href="{% url 'client_login' %}" class="">
+          <div class="mt-4">Client Login</div>
+        </a>
         <p id="footer-copyright" class="mt-5 mb-3 text-muted"></p>
         <p id="footer-time" class=" mb-3 text-muted"></p>
       </form>
