--- a/templates/sidebar/admin_sidebar.html
+++ b/templates/sidebar/admin_sidebar.html
@@ -66,13 +66,13 @@
       </a>
       <ul class="collapse list-unstyled pl-4 w-100" id="tables">
         <li class="nav-item">
-          <a class="nav-link pl-3" href="./table_basic.html"><span class="ml-1 item-text">Lookup Keys</span></a>
+          <a class="nav-link pl-3" href="{% url 'admin_apikey_all' %}"><span class="ml-1 item-text">All Keys</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link pl-3" href="./table_datatables.html"><span class="ml-1 item-text">Issue Key</span></a>
+          <a class="nav-link pl-3" href="./table_datatables.html"><span class="ml-1 item-text">Manage Keys</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link pl-3" href="./table_advanced.html"><span class="ml-1 item-text">Deactivate Keys</span></a>
+          <!-- <a class="nav-link pl-3" href="./table_advanced.html"><span class="ml-1 item-text"></span></a> -->
         </li>
       </ul>
     </li>
